--- a/docs/security.mdx
+++ b/docs/security.mdx
@@ -54,7 +54,7 @@ DeployStack automatically protects sensitive MCP configuration values through a 
 **API Response Protection:**
 - **Automatic Masking**: All API responses automatically mask secret values as `*****`
 - **No Secret Exposure**: Secret values never appear in API responses, logs, or user interfaces
-- **Runtime Decryption**: Only authorized operations (like gateway configuration generation) can decrypt secrets for actual use
+- **Runtime Decryption**: Only authorized operations (like satellite configuration generation) can decrypt secrets for actual use
 
 **Three-Tier Secret Management:**
 - **Template Level**: Global administrators define which fields are secret types in schemas
