--- a/docs/teams.mdx
+++ b/docs/teams.mdx
@@ -19,7 +19,7 @@ In DeployStack, teams provide:
 - **Team Collaboration**: Teams support multiple members with role-based access control
 - **Default Team Protection**: Your personal default team cannot have additional members added
 
-Every team acts as a complete team environment, containing everything needed to configure and manage MCP servers through the DeployStack Gateway.
+Every team acts as a complete team environment, containing everything needed to configure and manage MCP servers through the DeployStack Satellite.
 
 ## Getting Started with Teams
 
