--- a/docs/mcp-admin-schema-workflow.mdx
+++ b/docs/mcp-admin-schema-workflow.mdx
@@ -44,17 +44,19 @@ Input the raw Claude Desktop configuration:
 ```json
 {
   "mcpServers": {
-    "filesystem": {
+    "web-search": {
       "command": "npx",
       "args": [
         "-y",
-        "@modelcontextprotocol/server-filesystem",
-        "/Users/username/Desktop"
-      ]
+        "@brightdata/mcp-server-web-search"
+      ],
+      "env": {
+        "API_KEY": "your-api-key-here",
+        "SEARCH_QUOTA": "1000"
+      }
     }
   }
 }
-```
 
 The system extracts all arguments and environment variables for categorization.
 
@@ -86,35 +88,40 @@ For every argument and environment variable extracted from the Claude Desktop co
 
 This sophisticated system determines the exact configuration experience for teams and users.
 
-### Example: Filesystem MCP Server
+### Example: Web Search MCP Server
 
 **Raw Configuration:**
 ```json
 {
   "mcpServers": {
-    "filesystem": {
+    "web-search": {
       "command": "npx",
       "args": [
         "-y",
-        "@modelcontextprotocol/server-filesystem",
-        "/Users/username/Desktop"
-      ]
+        "@brightdata/mcp-server-web-search"
+      ],
+      "env": {
+        "API_KEY": "your-api-key-here",
+        "SEARCH_QUOTA": "1000",
+        "DEFAULT_ENGINE": "google"
+      }
     }
   }
 }
 ```
 
 **Your Categorization:**
-- **🔒 Template**: `-y` and `@modelcontextprotocol/server-filesystem` (system commands, locked forever)
-- **🔓 User Configurable**: `/Users/username/Desktop` (personal directory paths, default unlocked)
-- **No Team Level**: This server doesn't need shared team configuration
+- **🔒 Template**: `-y` and `@brightdata/mcp-server-web-search` (system commands, locked forever)
+- **🔧 Team Configurable**: `API_KEY` and `SEARCH_QUOTA` (shared credentials and limits)
+- **🔓 User Configurable**: `DEFAULT_ENGINE` (personal search preference, default unlocked)
 
 **Lock/Unlock Decisions:**
-- Directory paths: Default unlocked (users can customize their own directories)
-- No visibility restrictions (directory paths are not sensitive)
-- Validation: Require valid directory paths, allow 1-10 directories per user
+- API credentials: Default locked for users, hidden from users (security)
+- Search quota: Default locked for users, visible to users (team resource management)
+- Search engine: Default unlocked (users can customize their preference)
+- Validation: API key must be valid format, quota must be positive number
 
-**Result**: Users can configure their own directories, but can't modify the core system commands.
+**Result**: Teams manage shared API credentials and usage quotas, but users can customize their search engine preferences.
 
 ### Another Example: API MCP Server with Secrets
 
@@ -161,9 +168,9 @@ DeployStack provides suggestions to help with categorization:
 - Service endpoints
 
 **🔓 User Configurable Suggestions:**
-- File paths with `/Users/` or `/home/`
-- Debug and preference settings
-- Device-specific configuration
+- Search preferences and result formatting
+- Cache and performance settings
+- Personal API preferences
 
 ### Configuration Schema Step Interface
 
@@ -177,14 +184,9 @@ Extracted Arguments from Claude Desktop Config:
 │     Configuration Level: Template (Static) ▼                               │
 │     ✓ Locked Forever (Cannot be changed by teams or users)                │
 │                                                                             │
-│ [1] "@modelcontextprotocol/server-filesystem"                             │
+│ [1] "@brightdata/mcp-server-web-search"                                   │
 │     Configuration Level: Template (Static) ▼                               │
 │     ✓ Locked Forever (Cannot be changed by teams or users)                │
-│                                                                             │
-│ [2] "/Users/username/Desktop"                                              │
-│     Configuration Level: User Configurable ▼                               │
-│     ☐ Default Team Locked (Recommended: Unlocked for personal paths)       │
-│     Schema: Directory Path, Required: Yes, Min: 1, Max: 10                 │
 │                                                                             │
 │ [+] Add team-configurable argument                                          │
 │ [+] Add user-configurable argument                                          │
@@ -195,20 +197,28 @@ Extracted Arguments from Claude Desktop Config:
 ```
 Extracted Environment Variables from Claude Desktop Config:
 ┌─────────────────────────────────────────────────────────────────────────────┐
-│ TEAM_TOKEN: "my-team-token"                                                 │
+│ API_KEY: "your-api-key-here"                                                │
 │ Configuration Level: Team Configurable ▼                                   │
 │ ├─ Type: Secret ▼                                                          │
 │ ├─ Required: ✓                                                             │
-│ ├─ Description: Team authentication token                                   │
+│ ├─ Description: BrightData API authentication key                           │
 │ ├─ ✓ Default Team Locked (Users cannot modify)                             │
-│ └─ ☐ Visible to Users (Recommended: Hidden for secrets)                  │
+│ └─ ✓ Hidden from Users (Recommended for API keys)                          │
 │                                                                             │
-│ USER_TOKEN: "my-user-token"                                                 │
+│ SEARCH_QUOTA: "1000"                                                        │
+│ Configuration Level: Team Configurable ▼                                   │
+│ ├─ Type: Number ▼                                                          │
+│ ├─ Required: ✓                                                             │
+│ ├─ Description: Daily search query limit                                    │
+│ ├─ ✓ Default Team Locked (Teams control resource limits)                   │
+│ └─ ☐ Hidden from Users (Users can see their quota limits)                  │
+│                                                                             │
+│ DEFAULT_ENGINE: "google"                                                    │
 │ Configuration Level: User Configurable ▼                                   │
-│ ├─ Type: Secret ▼                                                          │
+│ ├─ Type: String ▼                                                          │
 │ ├─ Required: ☐                                                             │
-│ ├─ Description: Personal user authentication token                          │
-│ └─ ☐ Default Team Locked (Recommended: Unlocked for user control)        │
+│ ├─ Description: Preferred search engine                                     │
+│ └─ ☐ Default Team Locked (Recommended: Unlocked for user preference)      │
 │                                                                             │
 │ [+] Add team-configurable environment variable                              │
 │ [+] Add user-configurable environment variable                              │
