docs: Update npm link to point to the official getting started documentation

--- a/docs/local-setup.mdx
+++ b/docs/local-setup.mdx
@@ -25,7 +25,7 @@ This guide is for contributors and developers who want to run DeployStack locall
     
     - **[Git](https://git-scm.com/book/en/v2/Getting-Started-Installing-Git)**: Version control system
     - **[Node.js v18+](https://nodejs.org/en/download)**: JavaScript runtime (v18 or higher required)
-    - **[npm v8+](https://www.npmjs.com/get-npm)**: Package manager (comes with Node.js)
+    - **[npm v8+](https://docs.npmjs.com/getting-started)**: Package manager (comes with Node.js)
     - **[Docker](https://docs.docker.com/get-docker/)**: For running databases (optional but recommended)
     
     ### Verify Installation
